examples/test/testpolicy5020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5020
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key34: value15
      key17: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value32
          key37: value11
          key3: value24
      podSelector:
        matchLabels:
          key2: value27
          key3: value38
          key28: value42
